n8n/manifests/09-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: postgres
    spec:
      imagePullSecrets:
        - name: my-docker-secret
      restartPolicy: Always
      containers:
        - name: postgres
          image: postgres:13-alpine
          resources:
            limits:
              cpu: "1.0"
              memory: "1024Mi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
      volumeMounts:
        - name: oci-block-volume-postgres-pvc
          mountPath: /var/lib/postgresql/data
    volumes:
      - name: oci-block-volume-postgres-pvc
        persistentVolumeClaim:
          claimName: oci-block-volume-postgres-pvc
