n8n/manifests/10-n8n-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-main
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n-main
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n-main
    spec:
      restartPolicy: Always
      containers:
        - name: main
          image: n8nio/n8n:latest
          args: ["start"]
          resources:
            limits:
              cpu: "0.3"
              memory: "300Mi"
            requests:
              cpu: "0.1"
              memory: "100Mi"
      volumeMounts:
        - name: oci-block-volume-n8n-pvc
          mountPath: /data/.n8n  # Caminho onde o volume será montado no container
    volumes:
      - name: oci-block-volume-n8n-pvc
        persistentVolumeClaim:
          claimName: oci-block-volume-n8n-pvc
