n8n/manifests/11-n8n-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      service: n8n-webhook
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: n8n-webhook
    spec:
      restartPolicy: Always
      containers:
        - name: webhook
          image: n8nio/n8n:latest
          args: ["webhook"]
          resources:
            limits:
              cpu: "1.0"
              memory: "1024Mi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
