n8n/manifests/06-service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  ports:
    - port: 5432
  selector:
    service: postgres
