n8n/manifests/07-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  clusterIP: None
  ports:
    - port: 6379
  selector:
    service: redis
