n8n/manifests/08-service-n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-main
spec:
  type: ClusterIP
  selector:
    service: n8n-main
  ports:
    - port: 5678
