n8n/manifests/14-service-werbhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-webhook
spec:
  type: ClusterIP
  selector:
    service: n8n-webhook
  ports:
    - port: 5678
