n8n/manifests/13-n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: "nginx"
  rules:
    - host: n8n-hml.jetsales.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-main
                port:
                  number: 5678
          - path: /webhook/
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook
                port:
                  number: 5678
          - path: /webhook-waiting/
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook
                port:
                  number: 5678
          - path: /metrics/
            pathType: Prefix
            backend:
              service:
                name: n8n-main
                port:
                  number: 5678
